# Agents-Runner

./: AGENTS.md  ANIMATIONS.md  ANIMATION_COLORS.md  ARCHITECTURE.md  ARTIFACTS_TAB_AUDIT_REPORT.md  ARTIFACTS_TAB_BUG_DIAGRAM.txt  ARTIFACTS_TAB_QUICK_FIX.md  CLEANUP_STATUS.md  CVE_qa4_008_REPORT.md  FIRST_RUN_SETUP_SUMMARY.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  PHASE2_IMPLEMENTATION.md  QA4-008-FIX-SUMMARY.md  QA4-008-SYMLINK-FIX.md  README.md  TASK9_IMPLEMENTATION_SUMMARY.md  cleanup_t006.py  import_lucide_icons.py  main.py  profile_background.py  profile_background_detailed.py  pyproject.toml  run_docker_e2e_tests.sh  stress_test_timers.sh  test-issue141-diagnostics.sh  test_cooldown_system.py  test_cve_qa4_008.py  test_first_run_setup.py  test_integration.py  test_spellcheck.py  test_supervisor.py  test_supervisor_integration.py  test_symlink_security.py  test_t007.py  test_timer_warnings.py  test_timer_warnings_final.py  test_timer_warnings_v2.py  test_workspace_security.py  verify_codex_background.py  (+2 more)
.agents/: T009-COMPLETION-SUMMARY.md  temp-cleanup-tasks.sh
.githooks/: pre-commit
.github/: copilot-instructions.md
agents_runner/: __init__.py  agent_cli.py  agent_display.py  app.py  artifacts.py  docker_platform.py  gh_management.py  github_token.py  log_format.py  merge_pull_request.py  midoriai_template.py  persistence.py  pr_metadata.py  qt_diagnostics.py  terminal_apps.py
artifacts/: agent-output.md
codex_local_conatinerd/: app.py  docker_runner.py  environments.py  gh_management.py  persistence.py  prompt_sanitizer.py  style.py  (+1 more)
(+742 files in other folders)
