[project]
name = "agents-runner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.11"
dependencies = [
    "cryptography>=46.0.3",
    "faster-whisper>=1.2.1",
    "pygments>=2.17.0",
    "pyside6>=6.10.1",
    "pyspellchecker>=0.8.1",
]

[dependency-groups]
lint = [
    "ruff>=0.12.0",
]
test = [
    "pytest>=8.4.0",
]

[tool.pytest.ini_options]
testpaths = ["agents_runner/tests"]
pythonpath = ["."]
