[project]
name = "midori-ai-agents-runner"
version = "0.1.0.30"
description = "A GUI for running AI agents in Docker containers with workspace and GitHub management."
readme = "README.md"
requires-python = "==3.13.11"
dependencies = [
    "cryptography>=46.0.3",
    "faster-whisper>=1.2.1",
    "midori_ai_logger",
    "pydantic>=2.0",
    "pygments>=2.17.0",
    "pyside6>=6.10.1",
    "pyspellchecker>=0.8.1",
    "tomli>=2.2.1",
    "tomli-w>=1.1.0",
]

[dependency-groups]
lint = [
    "ruff>=0.12.0",
]
test = [
    "pytest>=8.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents_runner"]

[tool.pytest.ini_options]
testpaths = ["agents_runner/tests"]
pythonpath = ["."]

[tool.uv.sources]
midori_ai_logger = { git = "https://github.com/Midori-AI-OSS/agents-packages.git", subdirectory = "logger" }
